--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
         //noinspection OldTargetApi
         targetSdk 33
         versionCode 1
-        versionName "1.2.1"
+        versionName "1.2.5"
+        vectorDrawables.useSupportLibrary true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
