--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,16 @@
                 <action android:name="com.mohammadkk.myaudioplayer.action.NEXT" />
                 <action android:name="com.mohammadkk.myaudioplayer.action.SKIP_BACKWARD" />
                 <action android:name="com.mohammadkk.myaudioplayer.action.SKIP_FORWARD" />
+                <action android:name="com.mohammadkk.myaudioplayer.action.REFRESH_LIST" />
                 <action android:name="com.mohammadkk.myaudioplayer.action.BROADCAST_STATUS" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".services.ScannerService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.mohammadkk.myaudioplayer.action.SCANNER" />
             </intent-filter>
         </service>
 
