--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@
 buildscript {
     ext {
         core_version = '1.10.1'
+        preference_version = '1.2.1'
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0"
     }
 }
 plugins {
     id 'com.android.application' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
